# ydb-query-metrics

./: .gitignore  README.md  pyproject.toml  requirements.txt  ydb-query-metrics.bat  ydb-query-metrics.sh
src/ydb_query_metrics/: __init__.py  __main__.py  cli.py  file_format.py  formatting.py  query_filter.py  query_processor.py  query_statistics.py
tests/: conftest.py  test_cli.py  test_file_format.py  test_formatting.py  test_query_filter.py  test_query_processor.py  test_query_statistics.py
tests/fixtures/: query_metrics_sample.tsv  top_queries_sample.tsv
